<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.together.hanyou.LoginActivity">
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >
        <EditText
            android:hint="@string/user_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:hint="@string/password_edit_text"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/login_button"
            android:text="@string/login_button"
            android:background="#03CB73"
            android:textColor="#ffffff"
            android:textSize="27px"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/login_layout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/register_button"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#03CB73"
            android:text="@string/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forget_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <TextView
        android:text="@string/other_login_text"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:textColor="#878787"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="#BEBEBE"
        android:layout_width="300dp"
        android:layout_height="1dp"/>
</RelativeLayout>
